objects/Sales_Team__c.object
<CustomObject>
    <description>Custom sales team member linked to Opportunity team member via trigger</description>
    <fields>
        <fullName>Formula_User_Name__c</fullName>
        <formula>User__r.FirstName &amp; User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001lw8PEAQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SForce_Sales_Team_Id__c</fullName>
        <label>SForce Sales Team Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Forecasting - Baseline Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - CDP ISR Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Dealix Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Digital Solutions Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Enterprise Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Inside Sales Laser Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Inside Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - National Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - NIADA Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Retail Solutions Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Saturn Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Telephony Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Forecasting Rep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001lw8AEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID {00000}</displayFormat>
        <label>Sales Team ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>